1.1 Tests added